--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -249,6 +249,14 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             </dd>
         </dl>
         <dl>
+            <dt>Tidelift</dt>
+            <dd>
+                Byte Buddy is <a href="https://tidelift.com/lifter/search/maven/net.bytebuddy:byte-buddy">listed on Tidelift</a>. 
+                If you are not using Byte Buddy to an extend where you want to purchase explicit support and want to support the 
+                open source community in general, please consider a subscription.
+            </dd>
+        </dl>
+        <dl>
             <dt>Free</dt>
             <dd>
                 General questions can be asked on <a href="http://stackoverflow.com/questions/tagged/byte-buddy">Stack Overflow</a>
