--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -251,9 +251,10 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
         <dl>
             <dt>Tidelift</dt>
             <dd>
-                Byte Buddy is <a href="https://tidelift.com/lifter/search/maven/net.bytebuddy:byte-buddy">listed on Tidelift</a>. 
-                If you are not using Byte Buddy to an extend where you want to purchase explicit support and want to support the 
-                open source community in general, please consider a subscription.
+                Byte Buddy is 
+                <a href="https://tidelift.com/subscription/pkg/maven-net-bytebuddy-byte-buddy?utm_source=byte-buddy&utm_medium=referral">
+                listed on Tidelift</a>. If you are not using Byte Buddy to an extend where you want to purchase explicit support and want 
+                to support the open source community in general, please consider a subscription.
             </dd>
         </dl>
         <dl>
