--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -1657,7 +1657,7 @@ MemoryDatabase loggingDatabase = new ByteBuddy()
     </span></li>
     <li><span>
         A method delegation can be used to construct instances of a given type. By using
-        <code>MethodDelegation.construct(Class)</code>, any invocation of an intercepted method returns a
+        <code>MethodDelegation.toConstructor(Class)</code>, any invocation of an intercepted method returns a
         new instance of the given target type.
     </span></li>
 </ul>
