--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -280,7 +280,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             manipulations, Byte Buddy is intentionally exposing the ASM API to its users. Of course, the direct
             use of ASM remains fully optional and most users will most likely never require it. This choice was
             made such that a user of Byte Buddy is not restrained to its higher-level functionality but can
-            implement custom implementations without a fuzz when it is necessary.
+            implement custom implementations without a fuss when it is necessary.
         </p>
 
         <p>
