Remove version reference from webpage.

--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -172,8 +172,8 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             <dt>Download</dt>
             <dd>
                 <div>
-                    Byte Buddy is currently released in version {{version}}. You can download Byte Buddy directly
-                    from <a href="https://bintray.com/raphw/maven/ByteBuddy">its Bintray page</a>.
+                    You can download Byte Buddy directly from 
+                    <a href="https://bintray.com/raphw/maven/ByteBuddy">its Bintray page</a>.
                     Alternatively, you can also download the
                     <a href="https://github.com/raphw/byte-buddy/releases">source code from GitHub</a>.
                 </div>
