--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -81,7 +81,7 @@
         <hr style="border: 1px dotted rgba(255, 153, 0, 1)"/>
 
         <p>
-            Byte Buddy offers excellent performance at production quality. It is stable and in use by distiguished
+            Byte Buddy offers excellent performance at production quality. It is stable and in use by distinguished
             frameworks and tools such as <a href="http://mockito.io">Mockito</a>,
             <a href="https://hibernate.org">Hibernate</a>,
             <a href="https://bazel.io">Google's Bazel build system</a> and
