Fix typo in sophisticated

--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -155,7 +155,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
         </p>
 
         <p>
-            Of course, Byte Buddy is capable of much more sopisticated class generation. Furthermore, Byte Buddy is
+            Of course, Byte Buddy is capable of much more sophisticated class generation. Furthermore, Byte Buddy is
             not limited to creating subclasses but can transform existing code. Byte Buddy also offers a convenient
             API for defining so-called
             <a href="https://docs.oracle.com/javase/8/docs/api/java/lang/instrument/package-summary.html">Java agents</a>
