Update method references.

--- a/partial/tutorial.partial.html
+++ b/partial/tutorial.partial.html
@@ -831,10 +831,10 @@ class Bar { }
 <pre class="prettyprint">
 class MyApplication {
   public static void main(String[] args) {
-    TypePool typePool = TypePool.Default.ofClassPath();
+    TypePool typePool = TypePool.Default.ofSystemLoader();
     new ByteBuddy()
       .redefine(typePool.describe("foo.Bar").resolve(), // do not use 'Bar.class'
-                ClassFileLocator.ForClassLoader.ofClassPath())
+                ClassFileLocator.ForClassLoader.ofSystemLoader())
       .defineField("qux", String.class) // we learn more about defining fields later
       .make()
       .load(ClassLoader.getSystemClassLoader());
