Remove Bintray references.

--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -173,7 +173,7 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             <dd>
                 <div>
                     You can download Byte Buddy directly from 
-                    <a href="https://bintray.com/raphw/maven/ByteBuddy">its Bintray page</a>.
+                    <a href="https://search.maven.org/search?q=g:net.bytebuddy">Maven Central</a>.
                     Alternatively, you can also download the
                     <a href="https://github.com/raphw/byte-buddy/releases">source code from GitHub</a>.
                 </div>
@@ -183,12 +183,6 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
                         <iframe src="https://ghbtns.com/github-btn.html?user=raphw&repo=byte-buddy&type=star&count=true"
                                 frameborder="0" scrolling="0" width="100" height="20"></iframe>
                     </div>
-                    <div style="float:left;">
-                        <a href="https://bintray.com/raphw/maven/ByteBuddy/_latestVersion" class="social-link">
-                            <img src="https://api.bintray.com/packages/raphw/maven/ByteBuddy/images/download.svg"
-                                 alt="download latest version">
-                        </a>
-                    </div>
                     <div class="clearfix"></div>
                 </div>
             </dd>
@@ -196,10 +190,9 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
         <dl>
             <dt>Repositories</dt>
             <dd>
-                Byte Buddy binaries are available from the <a href="http://search.maven.org/">Maven Central</a> and
-                <a href="https://bintray.com/bintray/jcenter">JCenter</a> repositories. Using a build manager, it is
-                therefore easy to define a project dependency on Byte Buddy. Before releasing your project, please take
-                the time to read through the information on
+                Byte Buddy binaries are available from the <a href="http://search.maven.org/">Maven Central</a>.
+                Using a build manager, it is therefore easy to define a project dependency on Byte Buddy. Before
+                releasing your project, please take the time to read through the information on
                 <a href="#dependency" data-du-smooth-scroll="" data-offset="40">maintaining a project dependency</a> on
                 Byte Buddy.<br style="margin-bottom: 20px;"/>
                 <tabset class="repository">
