--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -255,6 +255,14 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             </dd>
         </dl>
         <dl>
+            <dt>GitHub Sponsors</dt>
+            <dd>
+                You can support my work via <a href="https://github.com/sponsors/raphw">GitHub sponsors</a>. Note that this option is only 
+                meant for commercial actors who are looking for a simple payment channel and that do not expect support in return. Support 
+                via GitHub Sponsors is not possible to maintain VAT compliance. Please reach out for a direct support agreement instead.
+            </dd>
+        </dl>
+        <dl>
             <dt>Free</dt>
             <dd>
                 General questions can be asked on <a href="https://stackoverflow.com/questions/tagged/byte-buddy">Stack Overflow</a>
