--- a/byte-buddy-gradle-plugin/android-application-test/app/src/main/res/layout/activity_main.xml
+++ b/byte-buddy-gradle-plugin/android-application-test/app/src/main/res/layout/activity_main.xml
@@ -24,4 +24,9 @@
         android:layout_height="wrap_content"
         android:text="Hello World!" />
 
+    <TextView
+        android:id="@+id/text_instrumented_from_aar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
 </LinearLayout>
