--- a/partial/main.partial.html
+++ b/partial/main.partial.html
@@ -221,9 +221,8 @@ assertThat(dynamicType.newInstance().toString(), is("Hello World!"));
             <dd>
                 There exists an extensive documentation of all of Byte Buddy's features on <a href="#/tutorial">the
                 tutorial page</a>. Furthermore, Byte Buddy's in-code documentation is available from its source code
-                repositories <a href="/javadoc/{{version}}/index.html">and on this website</a>. A list of blog articles
-                and
-                conference presentations on Byte Buddy is available
+                repositories <a href="https://javadoc.io/doc/net.bytebuddy/byte-buddy">and on javadoc.io</a>. A
+                list of blog articles and conference presentations on Byte Buddy is available
                 <a href="https://github.com/raphw/byte-buddy/wiki/Web-resources">on the project's wiki</a>.
             </dd>
         </dl>
