Uses current OpenJDK domain on develop.partial.html

--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -29,7 +29,7 @@ mvn package
             <img alt="GitHub Actions Workflow Status" src="https://img.shields.io/github/actions/workflow/status/raphw/byte-buddy/main.yml">
         </a>
         and which is constantly monitoring Byte Buddy's latest state. The GitHub Action is configured to compile and test the
-        project for the <a href="http://openjdk.java.net/">Open JDK</a> versions 6 and 7 and the
+        project for the <a href="https://openjdk.org">Open JDK</a> versions 6 and 7 and the
         <a href="http://www.oracle.com/technetwork/java/javase/downloads/index-jsp-138363.html">Oracle JDK</a> versions
         7 and 8. Since some of our tests are creating and loading Java classes, we make sure that the generated classes
         do not use a format that cannot be understood by a specific Java version. If you are making changes to Byte
