--- a/partial/develop.partial.html
+++ b/partial/develop.partial.html
@@ -62,7 +62,7 @@ mvn package
         On its build, all dependencies are resolved and a dependency-free deployment descriptor is created. Further
         information can be found in the section on <a href="#/dependency">how to define a dependency onto Byte Buddy</a>.
         In order to activate this repacking, you need to run the Maven build using the <code>extras</code> profile which
-        will furthermore cause the creation of artifacts for source code and javadoc. If the <code>gpg</code>Maven
+        will furthermore cause the creation of artifacts for source code and javadoc. Maven
         attempts to sign all artifacts. For this to be possible,
         <a href="http://blog.sonatype.com/2010/01/how-to-generate-pgp-signatures-with-maven/">the gpg plugin must be
             configured correctly</a> by the signer. As another module, <code>byte-buddy-benchmark</code> contains a
